fix banner alignments

--- a/css/app.scss
+++ b/css/app.scss
@@ -764,18 +764,6 @@ pre.highlight {
     }
   }
 
-  .secondary-banner {
-    .contact-button {
-      float: none !important;
-    }
-
-    &.cookie-banner {
-      .cookie-button {
-        float: none !important;
-      }
-    }
-  }
-
   .primary-banner {
     height: 200px;
 
